# postgres-message-queue

./: .gitignore  Makefile  README.md  pyproject.toml
db/: schema.sql
docker/: Dockerfile  compose.yaml
src/: entitites.py  scheduler.py  settings.py  worker.py
