[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "worker-scheduler-poc"
dynamic = ["version"]
dependencies = [
	"psycopg[binary]==3.2.1",
	"pydantic==2.8.2"
]
requires-python = ">= 3.8"
description = "This is a POC for a Worker/Scheduler implementation using Postgres as the message queue"
